# dayledger

./: .gitignore  .tool-versions  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
dayledger/: cli.py  storage.py  summary.py
examples/: quickstart.sh
scripts/: dayledger
tests/: test_storage.py
